--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "server.js",
   "repository": "",
   "author": "Mostafa Eweda <mostafa@c9.io>",
+  "scripts": {
+        "start": "node server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
   "dependencies": {
     "async": "~0.2.8",
     "express": "~4.0.0",
